kube-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proxy-hopper-test
  labels:
    app.kubernetes.io/name: proxy-hopper
    environment: test
